[package]
name = "kprint"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
anyhow = "1.0.89"
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.30"
ipp = "5.0.4"
itertools = "0.13.0"
log = "0.4.22"
openidconnect = "3.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_variant = "0.1.3"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["sync"] }
tokio-util = { version = "0.7.12", features = ["compat", "io"] }
uuid = { version = "1.10.0", features = ["serde"] }
